syntax = "proto3";

option csharp_namespace = "GrcpOverlaySidecar";

package OyasumiOverlaySidecar;

service OyasumiOverlaySidecar {
  rpc Ping (Empty) returns (PingResponse) {}
  rpc RequestStop (Empty) returns (Empty) {}
  rpc AddNotification (AddNotificationRequest) returns (AddNotificationResponse) {}
  rpc ClearNotification (ClearNotificationRequest) returns (Empty) {}
  rpc SyncState (OyasumiSidecarState) returns (Empty) {}
}

// Requests & Responses
message PingResponse {
  uint32 pid = 1;
}

message AddNotificationRequest {
  string message = 1;
  uint32 duration = 2;
}

message AddNotificationResponse {
  optional string notification_id = 1;
}

message ClearNotificationRequest {
  string notification_id = 1;
}

message Empty {

}

message OyasumiSidecarState {
  optional bool sleep_mode = 1;
  optional VRCStatus vrc_status = 2;
  optional string vrc_username = 3;
}

enum VRCStatus {
  VRCStatus_Offline = 0;
  VRCStatus_Busy = 1;
  VRCStatus_AskMe = 2;
  VRCStatus_Active = 3;
  VRCStatus_JoinMe = 4;
}

